* 2014-07-18 - thorben.betten@open-xchange.com

 - Fix for bug 33593: Properly XML-escape characters written to XML output
 - Fix for bug 33587: Do graceful shutdown and handle exceptions

* 2014-07-17 - thorben.betten@open-xchange.com

 - Fix for bug 33570: Order shut-down initiated timer and cleanse cache of registered Servlets once they are unregistered

* 2014-07-16 - lars.hoogestraat@open-xchange.com

 - Fix for bug 33552: Decode RFC2047 address headers before parsing

* 2014-07-16 - jan.bauerdick@open-xchange.com

 - Fix for bug 33547: Make parameter parsing more robust

* 2014-07-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 33505: Prevent wrong changing date being applied to parent folder upon folder deletion
 - Fix for bug 33447: Corrected the 'exclude context admin' condition in the search term passed down to the storage layer
 - Fix for bug 33576: Also consider contacts without e-mail address when auto-completing in the contacts find module

* 2014-07-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 33478: Run AttachmentCleaner without delay

* 2014-07-11 - thorben.betten@open-xchange.com

 - Fix for bug 33522: Wrong table was referenced in SQL statement to prepare table "user_attribute" to have UUID as primary key
 - Fix for bug 33525: Use a more unique name for added index to not conflict with MySQL bug http://bugs.mysql.com/bug.php?id=61146
                      (that is fix with >= MySQL 5.6.3)

* 2014-07-09 - marc.arens@open-xchange.com

 - Fix for bug 27301: A MembershipListener recognizes a leaving hazelcast node and triggers a cleanup for its resources

* 2014-07-09 - martin.schneider@open-xchange.com

 - Fix for bug 33201: improved output if parameter is missing

* 2014-07-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 33485: Don't attempt to delete an empty list of files

* 2014-07-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 32489: Exclude special messenger files and folders from drive synchronization
